# more-context

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml  pythonpackage.yml
tests/: __init__.py  test_safe_context_manager.py
